# horizon_project

./: .env.example  .gitignore  Makefile  README.md  app.py  app_helpers.py  claude.md  inject.py  pyproject.toml
.github/workflows/: pytest.yaml
bart/: README.md  dedup_report.md
bart/hospital_egtasks/: hospital-egtask-10.xml  hospital-egtask-15.xml  hospital-egtask-20.xml  hospital-egtask-25.xml  hospital-egtask-30.xml  hospital-egtask-5.xml  hospital-egtask-random-10.xml  hospital_2k-egtask-e1-10-high.xml  hospital_2k-egtask-e1-10-low.xml  hospital_2k-egtask-e1-10-med.xml  hospital_2k-egtask-e1-15-high.xml  hospital_2k-egtask-e1-15-med.xml  hospital_2k-egtask-e1-20-high.xml  hospital_2k-egtask-e1-20-med.xml  hospital_2k-egtask-e1-25-high.xml  hospital_2k-egtask-e1-25-med.xml  hospital_2k-egtask-e1-30-high.xml  hospital_2k-egtask-e1-30-med.xml  hospital_2k-egtask-e1-5-high.xml  hospital_2k-egtask-e1-5-low.xml  hospital_2k-egtask-e1-5-med.xml  hospital_2k-egtask-e2-10.xml  hospital_2k-egtask-e2-15.xml  hospital_2k-egtask-e2-20.xml  hospital_2k-egtask-e2-25.xml  hospital_2k-egtask-e2-30.xml  hospital_2k-egtask-e2-5.xml
bart/insurance_claims_egtasks/: insurance_claims-egtask-10.xml  insurance_claims-egtask-15.xml  insurance_claims-egtask-20.xml  insurance_claims-egtask-25.xml  insurance_claims-egtask-30.xml  (+14 more)
benchmarks/: README.md  benchmark_horizon.py  llm_repair.py
code/: static_fd_analysis.py
docs/: Doxyfile  README.md
eval/: dataset_eval.py  effectiveness_eval.py  fd_eval.py  metrics.md  report.py
harness/: claude.md  horizon.md
horizon/: FDGraph.py  __init__.py  fd_pattern_graph.py  horizon.py  loaders.py  static_fd_analysis.py
notebooks/: README.md  augment_service_tickets.ipynb  build_injected.ipynb  characterize_dataset.ipynb  characterize_lazy.ipynb  csv_to_parquet.ipynb  development.ipynb  effectiveness_eval.ipynb  fd_demo.ipynb  huggingface_test.ipynb  llm_repair_eval.ipynb  opendatauk_eval.ipynb  repair_eval.ipynb  runtime_service_tickets.ipynb  single_attr_fds_hospital_2k.ipynb  test_dataset_eval.ipynb  test_eval.ipynb  union_parking_v2.ipynb
presentation/: horizon_workflow_notes.md
remote_data/: __init__.py  fetch.py  upload.py
tests/: test_dataset_eval.py  test_fd_eval.py  test_fd_pattern_graph.py  test_horizon.py  test_report.py  test_static_fd_analysis.py
(+38 files in other folders)
