[project]
name = "horizon-project"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "pandas>=1.5,<2.0",
    "numpy>=1.21,<2.0",
    "polars>=1.0",
    "datasets>=2.14",
    "huggingface-hub>=0.20",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "duckdb>=1.5.2",
    "python-dotenv>=1.2.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3.260113",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
