[project]
name = "horizon-project"
version = "0.1.0"
description = "Horizon: Scalable Dependency-driven Data Cleaning"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "pandas>=1.5,<2.0",
    "numpy>=1.21,<2.0",
    "datasets>=2.14",
    "huggingface-hub>=0.20",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "networkx>=3.4.2",
    "matplotlib>=3.10.9",
    "igraph>=1.0.0",
    "polars>=1.41.1",
    "duckdb>=1.5.2",
    "python-dotenv>=1.2.2",
    "pytest>=9.0.3"
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3.260113",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
